<resources>
    <string name="app_name">MyShipper</string>
    <string name="title_activity_main_user">MainUserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_oder">Danh sách đặt hàng</string>
    <string name="menu_wallet">Ví điện tử</string>
    <string name="menu_mydrivers">Tài xế yêu thích</string>
    <string name="menu_helpcenter">Tổng đài hỗ trợ</string>
    <string name="menu_settings">Cài đặt khác</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_signout">Đăng xuất</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>